# safe-ping

./: LICENSE
backend/: main.py  pyproject.toml
backend/docs/: README.md
docs/: README.md
frontend/: .gitignore  bump_version.py  main.py  pyproject.toml  pyrightconfig.json
frontend/docs/: README.md
frontend/src/: app.py  main.py  router.py
frontend/src/components/: app_bar.py  app_header.py  mobile_app_bar.py  nav_drawer.py  nav_drawer_button.py  nav_rail.py  navigation.py  platform.py  room_shell.py  rough_room_shell.py  temp.py  user_menu.py
frontend/src/components/app/: chat.py  dashboard.py  notes.py  room.py  room_info.py  room_list.py  room_nav.py  whiteboard.py
frontend/src/components/dialogs/: info.py
frontend/src/components/primitives/: avatar.py  empty.py  logo.py  theme_toggle.py  user_entry.py
frontend/src/components/styles/: button_style.py
frontend/src/constants/: breakpoints.py  colors.py  dimensions.py  fonts.py  images.py  info.py  navigation.py  phrases.py  platforms.py  prefs.py  room.py  routes.py  spacing.py  storage.py  styles.py  typography.py  utils.py
frontend/src/contexts/: navigation.py  room.py  room_provider.py  route.py  theme.py  user.py
frontend/src/core/: app.py  contexts.py  events.py  router.py
frontend/src/models/: message.py  notes.py  room.py  user.py  whiteboard.py
frontend/src/pages/: app.py  home.py  landing.py  login.py  not_found.py
frontend/src/repos/: messages.py  notes.py  rooms.py  user.py  whiteboard.py
frontend/src/services/: shared_prefs.py  ws.py
frontend/src/state/: app_state.py  room_state.py  theme_state.py  user_state.py
frontend/src/utils/: app_version.py  crypto.py  logger.py  logging.py  paths.py  platform.py  responsive.py
(+9 files in other folders)
