[project]
name = "safe-ping"
version = "4e38606ae0"
description = "a secure workspace and chat app"
readme = "docs/README.md"
requires-python = ">=3.10"
authors = [
	{ name = "Anirban RoyChowdhury", email = "anirbanrc@proton.me" },
	{ name = "Arka Bangal", email = "abangal2005@gmail.com" },
	{ name = "Adrija Kundu", email = "adrijakundu143@gmail.com" },
	{ name = "Anish Tiwari", email = "anishtiwari.758@gmail.com" },
	{ name = "Aryan Halwai", email = "aryanhalwai.758@gmail.com" },
]
dependencies = [
	"flet>=0.85.1",
	"platformdirs>=4.9.6",
]

[dependency-groups]
dev = [
	"flet-cli>=0.85.1",
	"flet-desktop>=0.85.1",
	"flet-web>=0.85.1",
]

[tool.flet]
desktop_flavor = "light"
org = "dev.is-a.ani183"
product = "safe-ping"
company = "Flet"
copyright = "Copyright (C) 2023-2026 by Flet"

[tool.flet.app]
path = "src"

[tool.ruff]
line-length = 80
indent-width = 4

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
